paralus/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: "paralus.upgrad.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paralus-contour-envoy
                port:
                  number: 80
  tls:
    - secretName: paralus-tls-secret
      hosts:
        - paralus.upgrad.com


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paralus-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.order: "200"
    alb.ingress.kubernetes.io/group.name: ingress-alb-prod-management
spec:
  ingressClassName: alb
  rules:
    - host: "paralus.talentedge.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paralus-contour-envoy
                port:
                  number: 80
